# YOLO_RKNN_Acceleration_Program

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  detect.sh
include/: SharedTypes.hpp  parse_config.hpp  postprocess.h  preprocess.h  rkYolo.hpp  rknnPool.hpp
include/reader/: FFmpegReader.hpp  OpencvReader.hpp  Reader.hpp  VideoReader.hpp
lib/ffmpeg/: libavdevice.so.60.3.100  libavfilter.so.9.12.100  libavformat.so.60.16.100  libavutil.so.58.29.100  libpostproc.so.57.3.100  libswresample.so.4.12.100  libswscale.so.7.5.100
reference/: ffmpeg_mpp_test.cpp  ffmpeg_rga_test.cpp
src/: main.cpp  parse_config.cpp  postprocess.cpp  preprocess.cpp  rkYolo.cpp
src/reader/: FFmpegReader.cpp  OpencvReader.cpp  README.md  VideoReader.cpp
